# catgrad-prototype

./: README.md  pyproject.toml
catgrad/: __init__.py  compile.py  initializer.py  layer.py  operation.py  optic.py  parameters.py  signature.py
catgrad/compiler/: __init__.py  decompose.py  model.py  python.py
catgrad/learner/: __init__.py  displacement.py  learner.py  update.py
examples/: __init__.py  iris.py
tests/: finite_function_strategies.py  strategies.py  test_compiler.py  test_layers.py  test_learner.py  test_optic.py  test_optic_functor.py  test_parameters.py  test_signature.py
